webpack之css模块化和拆分css代码为单独的css文件

--- a/wepack-main.html
+++ b/wepack-main.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="dist/css.css">
   <script src="dist/main.js"></script>
 </head>
 
 <body>
-  123123
+  <div id="component" class="component"></div>
 </body>
 
 </html>
